objects/SalesbyProductRep__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_by_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>Product__r.AffiliateLU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sales_by_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_by_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sales_by_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase__c</fullName>
        <label>Purchase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redemption__c</fullName>
        <label>Redemption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesId__c</fullName>
        <externalId>true</externalId>
        <label>SalesId</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>Quarterly Data since being loaded. No Territory. See the Sales by Product Detail (R) definition for more details.</description>
    <label>Sales by Product (Rep)</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Sales by Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales by Products (Rep)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Firm__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Product__c</columns>
        <columns>Purchase__c</columns>
        <columns>Redemption__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>